# SuperpoweredLatency

./: README.md
Android/: .gitignore  build.gradle  local.properties
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  SuperpoweredLatency.cpp  latencyMeasurer.cpp  sapa.h  sapaClient.cpp  sapaClient.h
Android/app/src/main/jni/apa/include/: IAPAInterface.h  IAPAInterfaceV2.h
Android/app/src/main/jni/apa/include/jack/: LICENSE.LGPLv2.1
Android/gradle/wrapper/: gradle-wrapper.properties
Android/sapa/jni/: Android.mk  Application.mk  sapa.cpp  sapaClient.cpp
Android/sapa/jni/apa/include/: APACommon.h  IAPAResponseInterface.h  IJackClientInterface.h  IJackClientInterfaceV2.h
iOS/: Info.plist  Main.storyboard  ViewController.h  ViewController.mm  machines.h
iOS/SuperpoweredLatency.xcodeproj/: project.pbxproj
iOS/SuperpoweredLatency.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/SuperpoweredLatency.xcodeproj/project.xcworkspace/xcshareddata/: SuperpoweredLatency.xccheckout
iOS/SuperpoweredLatency.xcodeproj/project.xcworkspace/xcuserdata/gaborszanto.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/SuperpoweredLatency.xcodeproj/project.xcworkspace/xcuserdata/szantog.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/SuperpoweredLatency.xcodeproj/xcuserdata/gaborszanto.xcuserdatad/xcschemes/: SuperpoweredLatency.xcscheme  xcschememanagement.plist
iOS/SuperpoweredLatency.xcodeproj/xcuserdata/szantog.xcuserdatad/xcschemes/: SuperpoweredLatency.xcscheme  (+1 more)
(+8 files in other folders)
